# markdown-qa

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cursor/rules/: uv.md
crates/md_qa_client/: Cargo.toml
crates/md_qa_client/src/: client.rs  config.rs  lib.rs  messages.rs
crates/md_qa_client/tests/: config_integration.rs  tui_integration.rs  websocket_integration.rs
crates/md_qa_gui/: index.html
crates/md_qa_gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/md_qa_gui/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/md_qa_gui/src-tauri/tests/: chat_integration.rs  config_ui_integration.rs  connection_integration.rs
docs/: protocol.md
markdown_qa/: __init__.py  cache.py  chunker.py  client.py  config.py  config_watcher.py  embeddings.py  formatter.py  index_manager.py  index_validator.py  loader.py  logger.py  manifest.py  messages.py  qa.py  query_handler.py  reload_scheduler.py  retrieval.py  server.py  server_config.py  vector_store.py
openspec/: AGENTS.md  project.md
openspec/changes/add-gui-client/: design.md  proposal.md  tasks.md
openspec/changes/add-gui-client/specs/gui-client/: spec.md
openspec/changes/add-incremental-indexing/: design.md  proposal.md  tasks.md
openspec/changes/add-incremental-indexing/specs/markdown-qa/: spec.md
openspec/changes/add-local-markdown-qa/: design.md  proposal.md  tasks.md
openspec/changes/add-local-markdown-qa/specs/markdown-qa/: spec.md
openspec/specs/markdown-qa/: spec.md
tests/: __init__.py  test_api_config.py  test_client.py  test_client_integration.py  test_client_interactive.py  test_config_watcher.py  test_formatter.py  test_incremental_indexing.py  test_index_manager.py  test_manifest.py  test_messages.py  test_qa.py  test_qa_integration.py  test_query_handler.py  test_reload_scheduler.py  test_server_config.py  test_server_config_file.py  test_server_config_reload.py  test_server_startup.py
