[package]
name = "md_qa_client"
version = "0.1.0"
edition = "2021"
description = "Shared Markdown Q&A client library for GUI and TUI"

[lib]
path = "src/lib.rs"

[[bin]]
name = "md-qa"
path = "src/bin/md_qa.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
predicates = "3"
futures-util = "0.3"
assert_cmd = "2"
